# Automated-Planning-Project

./: .gitignore  README.md
Problems/Problem_1/: Results.md  domain.pddl  problem.pddl
Problems/Problem_2/: Results.md  domain.pddl  problem.pddl  problem_amr.pddl
Problems/Problem_2/Classic/: domain.pddl  problem.pddl
Problems/Problem_2/Classical/: domain.pddl  problem.pddl  problem_drone.pddl
Problems/Problem_2/Fluent/: domain.pddl  domain_2.pddl  problem.pddl  problem_1.pddl  problem_2.pddl
Problems/Problem_2/Fluent/Previous_versions/: Results.md  domain_1.pddl  problem_1.pddl
Problems/Problem_3/: Results.md  domain.hddl  problem.hddl  problem_amr.hddl  problem_drone.hddl
Problems/Problem_4/: Results.md  domain.pddl  problem.pddl  problem_1.pddl  problem_2.pddl
Problems/Problem_4/test 5/: problem.pddl
Problems/Problem_5/: Setup.md
Problems/Problem_5/plansys2/: CMakeLists.txt  Results.md  package.xml  terminal_1_compile_and_run.sh  terminal_2_run.sh
Problems/Problem_5/plansys2/launch/: problem  problem_5_launch.py
Problems/Problem_5/plansys2/old/: _domain_old.pddl  _problem_old
Problems/Problem_5/plansys2/pddl/: domain.pddl  problem_1  problem_2
Problems/Problem_5/plansys2/src/: attach_carrier_action_node.cpp  deliver_supply_action_node.cpp  deliver_tool_action_node.cpp  detach_carrier_action_node.cpp  empty_box_actione_node.cpp  empty_carrier_action_node.cpp  fill_box_action_node.cpp  free_robot_action_node.cpp  load_carrier_action_node.cpp  load_robot_action_node.cpp  move_action_node.cpp  move_robot_action_node.cpp  pick_box_from_carrier_action_node.cpp
